# twobobs

./: Cargo.toml
src/: lib.rs  llm.rs  main.rs  tui.rs
