[package]
name = "twobobs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "twobobs"
path = "src/main.rs"

[lib]
name = "twobobs"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
async-trait = "0.1"
sha2 = "0.10"
shell-words = "1"
anyhow = "1"
thiserror = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tempfile = "3"